{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 186,
  "lineage": "01464afd-8342-04a0-db9f-afdc4c7ee7b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0918d07627a6fad28",
            "arn": "arn:aws:ec2:eu-west-1:343218196271:instance/i-0f3ec3de0c18782fe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3ec3de0c18782fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ef8a27e219d772c",
            "private_dns": "ip-10-0-2-157.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.157",
            "public_dns": "ec2-34-242-136-5.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.136.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0163109d5e5969ecc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bc4b1a1c87ec77b",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05533caf1943cbd64"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group/sg-05533caf1943cbd64",
            "description": "Allow SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05533caf1943cbd64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "343218196271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group/sg-04c817dc23057e4e7",
            "description": "Allow inbound traffic to ECS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c817dc23057e4e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "343218196271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-sg"
            },
            "tags_all": {
              "Name": "instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group/sg-04d67ff4060bc5e15",
            "description": "Allow ECS traffic to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d67ff4060bc5e15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c817dc23057e4e7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "343218196271",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:loadbalancer/app/devops-practical/b2c21496662e2290",
            "arn_suffix": "app/devops-practical/b2c21496662e2290",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-practical-617891593.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:loadbalancer/app/devops-practical/b2c21496662e2290",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-practical",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0905782b27e628594"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bc4b1a1c87ec77b"
              },
              {
                "subnet_id": "subnet-02e4aa3593a316e1d"
              }
            ],
            "subnets": [
              "subnet-02bc4b1a1c87ec77b",
              "subnet-02e4aa3593a316e1d"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-029936fe0addb1299",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:listener/app/devops-practical/b2c21496662e2290/db6e0656e2800a63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:targetgroup/h120250618204203457500000002/316a02fe0eecba61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:listener/app/devops-practical/b2c21496662e2290/db6e0656e2800a63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:loadbalancer/app/devops-practical/b2c21496662e2290",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecs-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:targetgroup/h120250618204203457500000002/316a02fe0eecba61",
            "arn_suffix": "targetgroup/h120250618204203457500000002/316a02fe0eecba61",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 120,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:343218196271:targetgroup/h120250618204203457500000002/316a02fe0eecba61",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:343218196271:loadbalancer/app/devops-practical/b2c21496662e2290"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "h120250618204203457500000002",
            "name_prefix": "h1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group/sg-0905782b27e628594",
            "description": "Security group for devops-practical application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0905782b27e628594",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS web traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-practical-20250618204203411300000001",
            "name_prefix": "devops-practical-",
            "owner_id": "343218196271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group-rule/sgr-0e232cfe0184ea969",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e232cfe0184ea969",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0905782b27e628594",
            "security_group_rule_id": "sgr-0e232cfe0184ea969",
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group-rule/sgr-0526e8f91251bcf18",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic",
            "from_port": 80,
            "id": "sgr-0526e8f91251bcf18",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0905782b27e628594",
            "security_group_rule_id": "sgr-0526e8f91251bcf18",
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "all_https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group-rule/sgr-083daabace1c094a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS web traffic",
            "from_port": 443,
            "id": "sgr-083daabace1c094a2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0905782b27e628594",
            "security_group_rule_id": "sgr-083daabace1c094a2",
            "tags": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "DevOps Practical",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:network-acl/acl-064c4a46ed7209c65",
            "default_network_acl_id": "acl-064c4a46ed7209c65",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-064c4a46ed7209c65",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "343218196271",
            "subnet_ids": [
              "subnet-02bc4b1a1c87ec77b",
              "subnet-02e4aa3593a316e1d",
              "subnet-0606cd659a78079e5",
              "subnet-07de51c4957145e41"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-default",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-default",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:route-table/rtb-0ed163ab90e9d9ab9",
            "default_route_table_id": "rtb-0ed163ab90e9d9ab9",
            "id": "rtb-0ed163ab90e9d9ab9",
            "owner_id": "343218196271",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-default",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-default",
              "Project": "DevOps Practical"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:security-group/sg-01c1201bb7a1a306a",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-01c1201bb7a1a306a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "343218196271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-default",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-default",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e43788ef98ef393",
            "arn": "arn:aws:ec2:eu-west-1:343218196271:elastic-ip/eipalloc-02e43788ef98ef393",
            "association_id": "eipassoc-06a19d81c263dd4d8",
            "domain": "vpc",
            "id": "eipalloc-02e43788ef98ef393",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-032ef755f0bfa8a3d",
            "private_dns": "ip-10-0-1-46.eu-west-1.compute.internal",
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-34-253-7-142.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.7.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:internet-gateway/igw-01f5fe5c24a41f5d9",
            "id": "igw-01f5fe5c24a41f5d9",
            "owner_id": "343218196271",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e43788ef98ef393",
            "association_id": "eipassoc-06a19d81c263dd4d8",
            "connectivity_type": "public",
            "id": "nat-05fe30ccc44238e64",
            "network_interface_id": "eni-032ef755f0bfa8a3d",
            "private_ip": "10.0.1.46",
            "public_ip": "34.253.7.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e4aa3593a316e1d",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-eu-west-1a",
              "Project": "DevOps Practical"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-049da0ce4f63c05911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05fe30ccc44238e64",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049da0ce4f63c0591",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f5fe5c24a41f5d9",
            "id": "r-rtb-0a0aecb4b826e52e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0aecb4b826e52e6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:route-table/rtb-049da0ce4f63c0591",
            "id": "rtb-049da0ce4f63c0591",
            "owner_id": "343218196271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05fe30ccc44238e64",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-private",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-private",
              "Project": "DevOps Practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:route-table/rtb-0a0aecb4b826e52e6",
            "id": "rtb-0a0aecb4b826e52e6",
            "owner_id": "343218196271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f5fe5c24a41f5d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-public",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-public",
              "Project": "DevOps Practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e12ca46cd78a829",
            "route_table_id": "rtb-049da0ce4f63c0591",
            "subnet_id": "subnet-07de51c4957145e41"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069454d9a38b5d009",
            "route_table_id": "rtb-049da0ce4f63c0591",
            "subnet_id": "subnet-0606cd659a78079e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06461e189187060f7",
            "route_table_id": "rtb-0a0aecb4b826e52e6",
            "subnet_id": "subnet-02e4aa3593a316e1d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbe9da3c2b4a880d",
            "route_table_id": "rtb-0a0aecb4b826e52e6",
            "subnet_id": "subnet-02bc4b1a1c87ec77b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:subnet/subnet-07de51c4957145e41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07de51c4957145e41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218196271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-private-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-private-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:subnet/subnet-0606cd659a78079e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0606cd659a78079e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218196271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-private-eu-west-1b",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-private-eu-west-1b",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:subnet/subnet-02e4aa3593a316e1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e4aa3593a316e1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218196271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-public-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-public-eu-west-1a",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:subnet/subnet-02bc4b1a1c87ec77b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bc4b1a1c87ec77b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218196271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-public-eu-west-1b",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc-public-eu-west-1b",
              "Project": "DevOps Practical"
            },
            "vpc_id": "vpc-029936fe0addb1299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:343218196271:vpc/vpc-029936fe0addb1299",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064c4a46ed7209c65",
            "default_route_table_id": "rtb-0ed163ab90e9d9ab9",
            "default_security_group_id": "sg-01c1201bb7a1a306a",
            "dhcp_options_id": "dopt-0a9b62dd0619232f6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029936fe0addb1299",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed163ab90e9d9ab9",
            "owner_id": "343218196271",
            "tags": {
              "Environment": "dev",
              "Name": "devops-practical-vpc",
              "Project": "DevOps Practical"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-practical-vpc",
              "Project": "DevOps Practical"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}